[project]
name = "python-sdk"
version = "0.1.0"
description = "Python SDK for Renegade protocol"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.8.2",
    "httpx>=0.27.0",
    "pydantic>=2.6.1",
    "cryptography>=42.0.2",
    "web3>=6.15.1",
    "python-dotenv>=1.0.1",
]
